User Page: Add missing border - fixes #654

--- a/github-dark.css
+++ b/github-dark.css
@@ -1774,7 +1774,7 @@
     border-bottom: 1px solid #343434 !important;
   }
   .simple-conversation-list > li, .site-footer, .blame .section-first td,
-  .wiki-list .wiki-list-item + .wiki-list-item {
+  .wiki-list .wiki-list-item + .wiki-list-item, .member-badge + .member-badge {
     border-top: 1px solid #343434 !important;
   }
   /* discussion timeline tweaks */
